--- a/search.html
+++ b/search.html
@@ -217,11 +217,13 @@
         <div class="menu-line"></div>
         <div class="menu-line"></div>
         <div class="menu-line"></div>
+        <div class="menu-line"></div>
     </div>
 
     <!-- Sidebar Navigation -->
 <div class="sidebar" id="sidebar">
     <ul>
+        <li><a href="index.html" onclick="toggleMenu()">Home</a></li>
         <li><a href="owner.html" onclick="toggleMenu()">Owner</a></li>
         <li><a href="timeline.html" onclick="toggleMenu()">SpyMC</a></li>
         <li><a href="status_all.html" onclick="toggleMenu()">AllStatus</a></li>
