--- a/search.html
+++ b/search.html
@@ -224,8 +224,8 @@
 <div class="sidebar" id="sidebar">
     <ul>
         <li><a href="index.html" onclick="toggleMenu()">Home</a></li>
-        <li><a href="owner.html" onclick="toggleMenu()">Owner</a></li>
-        <li><a href="timeline.html" onclick="toggleMenu()">SpyMC</a></li>
+        <li><a href="rules.html" onclick="toggleMenu()">Rule</a></li>
+        <li><a href="timeline.html" onclick="toggleMenu()">Lifeline</a></li>
         <li><a href="status_all.html" onclick="toggleMenu()">AllStatus</a></li>
     </ul>
 </div>
