admin-team.html

--- a/admin-team.html
+++ b/admin-team.html
@@ -35,7 +35,7 @@
       <a href="rules.html" class="link">Rules</a>
       <a href="#" class="link active">Admin-Team</a>
       <a href="contact.html" class="link">Contact</a>
-      <a href="search.html" class="link">TierTest</a>
+      <a href="search.html" class="link">Other</a>
     </div>
   </div>
 
