--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
       <a href="rules.html" class="link">Rules</a>
       <a href="admin-team.html" class="link">Admin-Team</a>
       <a href="#" class="link active">Contact</a>
-      <a href="search.html" class="link">TierTest</a>
+      <a href="search.html" class="link">Other</a>
     </div>
   </div>
 
