--- a/rules.html
+++ b/rules.html
@@ -34,7 +34,7 @@
       <a href="#" class="link active">Rules</a>
       <a href="admin-team.html" class="link">Admin-Team</a>
       <a href="contact.html" class="link">Contact</a>
-      <a href="search.html" class="link">TierTest</a>
+      <a href="search.html" class="link">Other</a>
     </div>
   </div>
 
