--- a/rules.html
+++ b/rules.html
@@ -33,7 +33,7 @@
       <a href="index.html" class="link">Home</a>
       <a href="#" class="link active">Rules</a>
       <a href="admin-team.html" class="link">Admin-Team</a>
-      <a href="search.html" class="link">Other</a>
+      <a href="https://tools.spymc.xyz" class="link">Other</a>
     </div>
   </div>
 
