admin-team.html

--- a/admin-team.html
+++ b/admin-team.html
@@ -34,7 +34,7 @@
       <a href="index.html" class="link">Home</a>
       <a href="rules.html" class="link">Rules</a>
       <a href="#" class="link active">Admin-Team</a>
-      <a href="search.html" class="link">Other</a>
+      <a href="https://tools.spymc.xyz" class="link">Other</a>
     </div>
   </div>
 
