--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <a href="#" class="link active">Home</a>
             <a href="rules.html" class="link">Rules</a>
             <a href="admin-team.html" class="link">Admin-Team</a>
-            <a href="https://tools.spymc.xyz" class="link">Other</a>
+            <a href="search.html" class="link">Other</a>
         </div>
     </div>
 
