Minecraft-Server-Checker.html

--- a/Minecraft-Server-Checker.html
+++ b/Minecraft-Server-Checker.html
@@ -220,7 +220,7 @@
 </head>
 <body>
 
-  <h1>Minecraft Server Checker</h1>
+  <h1>MCSRVSTAT</h1>
 
   <div class="container">
     <!-- Input and Check Button -->
