--- a/rules.html
+++ b/rules.html
@@ -30,11 +30,11 @@
     </div>
 
     <div class="links">
-            <a href="#" class="link active">Home</a>
-            <a href="rules.html" class="link">Rules</a>
-            <a href="admin-team.html" class="link">Team</a>
-            <a href="search.html" class="link">Tier</a>
-            <a href="https://solo.to/yoursenior" class="link">Owner</a>
+      <a href="#" class="link active">Home</a>
+      <a href="rules.html" class="link">Rules</a>
+      <a href="admin-team.html" class="link">Team</a>
+      <a href="search.html" class="link">Tier</a>
+      <a href="https://solo.to/yoursenior/" class="link">Owner</a>
     </div>
   </div>
 
