--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <a href="rules.html" class="link">Rules</a>
             <a href="admin-team.html" class="link">Team</a>
             <a href="search.html" class="link">Tier</a>
+            <a href="https://solo.to/yoursenior" class="link">Owner</a>
         </div>
     </div>
 
