--- a/all.html
+++ b/all.html
@@ -110,6 +110,7 @@
         <a href="admin-team.html" class="link">Team</a>
         <a href="search.html" class="link">Tier</a>
         <a href="https://solo.to/yoursenior" class="link">Owner</a>
+        <a href="https://senior.spymc.xyz/mc-icon" class="link">Icon Covertor</a>
     </div>
     
     <h1></h1>
