--- a/all.html
+++ b/all.html
@@ -111,6 +111,7 @@
         <a href="search.html" class="link">Tier</a>
         <a href="https://solo.to/yoursenior" class="link">Owner</a>
         <a href="https://senior.spymc.xyz/mc-icon" class="link">Icon Covertor</a>
+        <a href="https://senior.spymc.xyz/mcstats.html" class="link">Mc stats</a>
     </div>
     
     <h1></h1>
