--- a/results.html
+++ b/results.html
@@ -97,6 +97,7 @@
         <div class="helper">| WitheredSyed - silentsign4077</div>
         <div class="footer">Thank you to our dedicated staff for their service to the SpyMC community.</div>
         <a href="https://www.spymc.xyz/application" class="button">Apply to be a Helper</a>
+        <h1> Last update on 1/03/2025</h1>
     </div>
 </body>
 </html>
