--- a/results.html
+++ b/results.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SpyMC Helper Team</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap');
+        @import url('https://fonts.cdnfonts.com/css/minecraft-4');
         
         body {
-            font-family: 'Inter', sans-serif;
-            background: radial-gradient(circle, #0f0f17, #0b0b0f);
+            font-family: 'Minecraft', sans-serif;
+            background: #0d0d14;
             color: #ffffff;
             text-align: center;
             margin: 0;
@@ -22,38 +22,50 @@
         .container {
             width: 90%;
             max-width: 700px;
-            background: linear-gradient(135deg, #1c1c24, #121218);
+            background: #1a1a24;
             padding: 30px;
             border-radius: 16px;
-            box-shadow: 0 20px 50px rgba(0, 0, 0, 0.5);
+            box-shadow: 0 15px 40px rgba(0, 0, 0, 0.5);
             text-align: left;
             overflow-y: auto;
             max-height: 80vh;
         }
         h1 {
             color: #ffcc00;
-            font-size: 30px;
+            font-size: 28px;
             font-weight: 700;
             margin-bottom: 20px;
-            border-bottom: 3px solid #ffcc00;
+            border-bottom: 2px solid #ffcc00;
             padding-bottom: 10px;
             text-align: center;
         }
+        .announcement {
+            background: #ffcc00;
+            color: #000;
+            padding: 10px;
+            border-radius: 8px;
+            font-weight: bold;
+            text-align: center;
+            margin-bottom: 15px;
+        }
         .helper {
             background: rgba(255, 255, 255, 0.08);
-            margin: 10px 0;
-            padding: 14px;
-            border-radius: 10px;
+            margin: 8px 0;
+            padding: 12px;
+            border-radius: 8px;
             font-weight: 500;
-            font-size: 18px;
+            font-size: 17px;
             transition: 0.3s ease;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
         }
         .helper:hover {
             background: rgba(255, 255, 255, 0.15);
         }
         .footer {
             margin-top: 20px;
-            font-size: 15px;
+            font-size: 14px;
             color: #bbb;
             text-align: center;
         }
@@ -61,8 +73,8 @@
             display: block;
             background: #ffcc00;
             color: #000;
-            padding: 14px;
-            border-radius: 10px;
+            padding: 12px;
+            border-radius: 8px;
             text-decoration: none;
             font-weight: bold;
             transition: 0.3s ease;
@@ -72,32 +84,40 @@
         .button:hover {
             background: #e6b800;
         }
+        .update {
+            margin-top: 20px;
+            font-size: 14px;
+            color: #ffcc00;
+            text-align: center;
+            font-weight: bold;
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <h1>SpyMC Official Helper Team</h1>
-        <div class="helper">| ITACHI - itxx_itachi</div>
-        <div class="helper">| !Masked - the_masked___</div>
-        <div class="helper">| Aarav - itz_aarav6560</div>
-        <div class="helper">| Abhi - not_abhi11</div>
-        <div class="helper">| Alpha - alpha_xd_7</div>
-        <div class="helper">| Bea - bea23nub</div>
-        <div class="helper">| ded - gojo_satoru69_</div>
-        <div class="helper">| Foxla - foxla_nguyen</div>
-        <div class="helper">| Kaze - kazereaper</div>
-        <div class="helper">| LunarVortex - lunarvortexxd</div>
-        <div class="helper">| MEET - meetyt12</div>
-        <div class="helper">| Obito - rd_obito_playzz</div>
-        <div class="helper">| Prime? - primexvedant</div>
-        <div class="helper">| Reaper - rd_shadow_itsme</div>
-        <div class="helper">| Senpai - rd_senpai.ly</div>
-        <div class="helper">| Shadow - rd_shadow_playz</div>
-        <div class="helper">| VIKRANT - vikrantwarrior10</div>
-        <div class="helper">| WitheredSyed - silentsign4077</div>
+        <div class="announcement">⚠️ Important Announcement: Application is now Closed!. ⚠️</div>
+        <div class="helper">Helper || ITACHI <span>itxx_itachi</span></div>
+        <div class="helper">Helper || !Masked <span>the_masked___</span></div>
+        <div class="helper">Helper || Aarav <span>itz_aarav6560</span></div>
+        <div class="helper">Helper || Abhi <span>not_abhi11</span></div>
+        <div class="helper">Helper || Alpha <span>alpha_xd_7</span></div>
+        <div class="helper">Helper || Bea <span>bea23nub</span></div>
+        <div class="helper">Helper || ded <span>gojo_satoru69_</span></div>
+        <div class="helper">Helper || Foxla <span>foxla_nguyen</span></div>
+        <div class="helper">Helper || Kaze <span>kazereaper</span></div>
+        <div class="helper">Helper || LunarVortex <span>lunarvortexxd</span></div>
+        <div class="helper">Helper || MEET <span>meetyt12</span></div>
+        <div class="helper">Helper || Obito <span>rd_obito_playzz</span></div>
+        <div class="helper">Helper || Prime? <span>primexvedant</span></div>
+        <div class="helper">Helper || Reaper <span>rd_shadow_itsme</span></div>
+        <div class="helper">Helper || Senpai <span>rd_senpai.ly</span></div>
+        <div class="helper">Helper || Shadow <span>rd_shadow_playz</span></div>
+        <div class="helper">Helper || VIKRANT <span>vikrantwarrior10</span></div>
+        <div class="helper">Helper || WitheredSyed <span>silentsign4077</span></div>
         <div class="footer">Thank you to our dedicated staff for their service to the SpyMC community.</div>
         <a href="https://www.spymc.xyz/application" class="button">Apply to be a Helper</a>
-        <h1> Last update on 1/03/2025</h1>
+        <div class="update">Last Update: March 1, 2025</div>
     </div>
 </body>
 </html>
