--- a/all.html
+++ b/all.html
@@ -56,6 +56,7 @@
         <ul class="link-list">
             <li><a href="https://www.spymc.xyz/">Home Page</a></li>
             <li><a href="https://www.spymc.xyz/status">Status Page</a></li>
+            <li><a href="https://www.spymc.xyz/timeline">Timeline</a></li>
             <li><a href="https://www.spymc.xyz/follow">All Social Media</a></li>
             <li><a href="https://www.spymc.xyz/discord">Discord</a></li>
             <li><a href="https://www.spymc.xyz/tac">Terms and Guidelines</a></li>
