--- a/all.html
+++ b/all.html
@@ -62,7 +62,7 @@
             <li><a href="https://www.spymc.xyz/tac">Terms and Guidelines</a></li>
             <li><a href="https://www.spymc.xyz/results">Results</a></li>
             <li><a href="https://www.spymc.xyz/application">Application Page</a></li>
-            <li><a href="https://www.spymc.xyz/senior">Senior Page</a></li>
+            <li><a href="https://senior.spymc.xyz">Senior Page</a></li>
             <li><a href="https://www.spymc.xyz/search.html">Player Tiers</a></li>
             <li><a href="https://senior.spymc.xyz/mcstats.html">MC Stats</a></li>
             <li><a href="https://senior.spymc.xyz/mc-icon.html">MC Icon</a></li>
