--- a/tac.html
+++ b/tac.html
@@ -124,6 +124,38 @@
             <li>By using SpyMC, you consent to data collection as outlined.</li>
         </ul>
         <hr>
+
+<h2>1. Zero Tolerance for Hacks & Exploits</h2>
+<ul>
+    <li>Using, promoting, or distributing hacks, cheats, or exploits is strictly prohibited.</li>
+    <li>Any attempt to bypass server security or gain unauthorized advantages will result in an instant ban.</li>
+    <li>Players must report any exploit or suspicious activity immediately.</li>
+</ul>
+<hr>
+
+<h2>2. Staff Conduct & Security</h2>
+<ul>
+    <li>Staff members must uphold server integrity and maintain fair play.</li>
+    <li>Abuse of power, leaking confidential data, or aiding unfair advantages will result in removal.</li>
+    <li>Engaging in security threats, including unauthorized access or modifications, will lead to strict consequences.</li>
+</ul>
+<hr>
+
+<h2>3. Unauthorized Modifications & Actions</h2>
+<ul>
+    <li>Making unapproved changes to server settings, plugins, or permissions is forbidden.</li>
+    <li>Any unauthorized promotion or external affiliation within SpyMC will lead to removal.</li>
+    <li>Players must obtain prior approval before sharing third-party tools or modifications.</li>
+</ul>
+<hr>
+
+<h2>4. Reporting & Consequences</h2>
+<ul>
+    <li>Any violations should be reported to SpyMC Administration immediately.</li>
+    <li>Severe infractions, such as security breaches or hacking, will result in permanent removal and blacklist.</li>
+    <li>SpyMC reserves the right to take necessary actions to maintain a safe and fair gaming environment.</li>
+</ul>
+<hr>
         
         <h2>9. Enforcement & Punishments</h2>
         <ul>
