--- a/Partner.html
+++ b/Partner.html
@@ -607,7 +607,7 @@
         <p class="sub-header">We collaborate to deliver unparalleled gaming experiences. Our premium network ensures maximum performance, reliability, and exclusive benefits for every player.</p>
         
         <div class="partner-grid">
-            <div class="partner-card" onclick="window.open('https://streamline-servers.com/minecraft-hosting', '_blank')">
+            <div class="partner-card" onclick="window.open('https://streamline-servers.com/game-servers/minecraft', '_blank')">
                 <div class="discount-badge">25% OFF</div>
                 <h2>DIAMOND PLAN</h2>
                 <p>Premium gaming performance for competitive and professional servers</p>
