--- a/Partner.html
+++ b/Partner.html
@@ -690,7 +690,7 @@
             <a href="https://au.trustpilot.com/review/streamline-servers.com" target="_blank" class="social-link">
                 <i class="fas fa-star"></i>
             </a>
-            <a href="https://twitter.com/StreamlineServers" target="_blank" class="social-link">
+            <a href="https://x.com/StreamServers/" target="_blank" class="social-link">
                 <i class="fab fa-twitter"></i>
             </a>
             <a href="https://www.youtube.com/StreamlineServers" target="_blank" class="social-link">
