--- a/Partner.html
+++ b/Partner.html
@@ -594,7 +594,7 @@
             </a>
             <div class="vs-circle">X</div>
             <a href="#" target="_blank">
-                <img src="https://media.discordapp.net/attachments/1288405141308833813/1296084022845509662/image0.png?ex=67ec818f&is=67eb300f&hm=b48604f69a211b48ceb23e92a8c11b3e37fe5459c1e1cb40ecb20c6698a98423&=&format=webp&quality=lossless&width=400&height=136" alt="SPYMC" class="partner-logo spymc-logo floating">
+                <img src="https://i.ibb.co/216tzPp7/image69.png" alt="SPYMC" class="partner-logo spymc-logo floating">
             </a>
         </div>
         
