--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
             <a href="admin-team.html" class="link">Team</a>
             <a href="search.html" class="link">Tier</a>
             <a href="https://solo.to/yoursenior" class="link">Owner</a>
+            <a href="https://status.spymc.xyz" class="link">Status</a>
+            <a href="partner.html" class="link">Tier</a>
         </div>
     </div>
 
