--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <a href="search.html" class="link">Tier</a>
             <a href="https://solo.to/yoursenior" class="link">Owner</a>
             <a href="https://status.spymc.xyz" class="link">Status</a>
-            <a href="partner.html" class="link">Tier</a>
+            <a href="partner.html" class="link">Partner</a>
         </div>
     </div>
 
