--- a/rules.html
+++ b/rules.html
@@ -35,7 +35,9 @@
             <a href="admin-team.html" class="link">Team</a>
             <a href="search.html" class="link">Tier</a>
             <a href="https://solo.to/yoursenior" class="link">Owner</a>
-    </div>
+            <a href="https://status.spymc.xyz" class="link">Status</a>
+            <a href="partner.html" class="link">Partner</a>
+        </div>
   </div>
 
   <!--Header-->
