--- a/admin-team.html
+++ b/admin-team.html
@@ -34,7 +34,7 @@
             <a href="#" class="link active">Home</a>
             <a href="rules.html" class="link">Rules</a>
             <a href="admin-team.html" class="link">Team</a>
-            <a href="search.html" class="link">Tier</a>
+            <a href="search.html" class="link">Tier-Results</a>
             <a href="https://solo.to/yoursenior" class="link">Owner</a>
             <a href="https://status.spymc.xyz" class="link">Status</a>
             <a href="partner.html" class="link">Partner</a>
