--- a/follow.html
+++ b/follow.html
@@ -674,11 +674,11 @@
                     <i class="fas fa-envelope social-icon"></i>
                     <span class="social-name">Email</span>
                 </a>
-                <a href="https://www.tiktok.com/@spymc.xyz" class="social-link" target="_blank" data-tooltip="Follow on TikTok">
+                <a href="https://www.tiktok.com/yoursenioryt" class="social-link" target="_blank" data-tooltip="Follow on TikTok">
                     <i class="fab fa-tiktok social-icon"></i>
                     <span class="social-name">TikTok</span>
                 </a>
-                <a href="https://www.twitch.tv/spymc" class="social-link" target="_blank" data-tooltip="Watch on Twitch">
+                <a href="https://www.twitch.tv/yoursenioryt" class="social-link" target="_blank" data-tooltip="Watch on Twitch">
                     <i class="fab fa-twitch social-icon"></i>
                     <span class="social-name">Twitch</span>
                 </a>
