--- a/follow.html
+++ b/follow.html
@@ -617,7 +617,7 @@
         <div class="server-header">
             <img src="https://i.ibb.co/tMF05rbH/image69.png" alt="SpyMC Logo" class="server-logo">
             <h1 class="server-title">SpyMC Network</h1>
-            <p class="server-tagline">SpyMC (spymc.xyz) is a vibrant platform that serves as the online hub for the gaming community. Managed and owned by YourSenior, the website showcases a variety of content related to the SpyMC Senior Network server..</p>
+            <p class="server-tagline">SpyMC (spymc.xyz) is a vibrant platform that serves as the online hub for the gaming community. Managed and owned by YourSenior,</p>
             <div class="server-ip" id="serverIp">
                 <i class="fas fa-server"></i>
                 <span>spymc.xyz</span>
