--- a/rules.html
+++ b/rules.html
@@ -34,9 +34,10 @@
             <a href="rules.html" class="link">Rules</a>
             <a href="admin-team.html" class="link">Team</a>
             <a href="search.html" class="link">Tier-Results</a>
+            <a href="shop.html" class="link">shop</a>
+            <a href="partner.html" class="link">Partner</a>
             <a href="https://solo.to/yoursenior" class="link">Owner</a>
             <a href="https://status.spymc.xyz" class="link">Status</a>
-            <a href="partner.html" class="link">Partner</a>
         </div>
   </div>
 
