--- a/spyrank.html
+++ b/spyrank.html
@@ -378,7 +378,7 @@
             </div>
 
             <div class="command">
-                <i class="fas fa-link"></i> !spy link
+                <i class="fas fa-link"></i> !spy chack
             </div>
             <p>Verifies your current linked Minecraft account and displays:</p>
             <ul>
@@ -401,22 +401,22 @@
             <h3>Additional Commands</h3>
             
             <div class="command">
-                <i class="fas fa-info-circle"></i> !spy status
+                <i class="fas fa-info-circle"></i> !spy show @user
             </div>
-            <p>Checks the current status of:</p>
+            <p>Checks the players status of:</p>
             <ul>
-                <li>Server connection</li>
-                <li>Bot uptime</li>
+                <li>Players connection</li>
+                <li>Players ranks</li>
                 <li>Last rank synchronization</li>
             </ul>
 
             <div class="command">
-                <i class="fas fa-users"></i> !spy members
+                <i class="fas fa-users"></i> !spy remove @user
             </div>
-            <p>Displays statistics about SPY rank holders:</p>
+            <p>Remove statistics about SPY rank holders:</p>
             <ul>
-                <li>Total number of SPY agents</li>
-                <li>Newest members</li>
+                <li>Remove player from of SPY agents</li>
+                <li>Remove members</li>
                 <li>Active/inactive breakdown</li>
             </ul>
         </div>
