--- a/search.html
+++ b/search.html
@@ -520,8 +520,8 @@
         <div class="links">
             <a href="index.html" class="link active"><i class="fas fa-home"></i> HQ</a>
             <a href="rules.html" class="link"><i class="fas fa-scroll"></i> Protocol</a>
-            <a href="admin-team.html" class="link"><i class="fas fa-user-secret"></i> Command</a>
-            <a href="contact.html" class="link"><i class="fas fa-satellite-dish"></i> Comms</a>
+            <a href="shop.html" class="link"><i class="fas fa-user-secret"></i> Shop</a>
+            <a href="toc.html" class="link"><i class="fas fa-satellite-dish"></i> Comms</a>
         </div>
     </nav>
 
