--- a/search.html
+++ b/search.html
@@ -519,7 +519,7 @@
         </a>
         <div class="links">
             <a href="index.html" class="link active"><i class="fas fa-home"></i> HQ</a>
-            <a href="rules.html" class="link"><i class="fas fa-scroll"></i> Protocol</a>
+            <a href="spyrank.html" class="link"><i class="fas fa-scroll"></i> SpyRank</a>
             <a href="shop.html" class="link"><i class="fas fa-user-secret"></i> Shop</a>
             <a href="toc.html" class="link"><i class="fas fa-satellite-dish"></i> Comms</a>
         </div>
