--- a/war.html
+++ b/war.html
@@ -458,7 +458,7 @@
             <a href="https://discord.spymc.xyz" class="contact-item" target="_blank">
                 <i class="fab fa-discord"></i> Support Discord
             </a>
-            <a href="https://spymc.xyz/toc" class="contact-item" target="_blank">
+            <a href="https://www.spymc.xyz/toc" class="contact-item" target="_blank">
                 <i class="fas fa-book"></i> Full Rulebook
             </a>
             <a href="https://www.spymc.xyz/shop" class="contact-item" target="_blank">
