--- a/timeline.html
+++ b/timeline.html
@@ -258,7 +258,7 @@
         <header>
             <img src="https://i.ibb.co/tMF05rbH/image69.png" alt="SpyMC" class="logo">
             <h1>SPYMC TIMELINE</h1>
-            <p class="subtitle">Our journey through the digital battlefield</p>
+            <p class="subtitle">Our relentless journey through the unforgiving trenches of the digital battlefield is a testament to calculated minds, silent strength, and the will to conquer empires not with noise, but with precision and shadows.</p>
         </header>
 
         <div class="timeline-container">
