--- a/follow.html
+++ b/follow.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SpyMC | Ultimate Minecraft Network</title>
     <meta name="description" content="SpyMC Minecraft Network - The most advanced Minecraft server network with minigames, survival, and unique gameplay experiences.(spymc.xyz)">
-    <link rel="shortcut icon" href="https://i.ibb.co/tMF05rbH/image69.png" type="image/png">
+    <link rel="icon" href="images/logo.png">
     <script src="https://cdn.jsdelivr.net/npm/animejs@3.2.1/lib/anime.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
