--- a/discord.html
+++ b/discord.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Official SpyMC Discord Server - Join our growing community of 25,000+ agents for exclusive perks, events, and support">
     <meta name="keywords" content="SpyMC, Discord, Minecraft Server, Gaming Community, SpyMC Network, Minecraft Discord">
     <meta name="author" content="SpyMC Network">
-    
+    <link rel="icon" href="images/logo.png">
     <meta property="og:title" content="Join the Official SpyMC Discord Community">
     <meta property="og:description" content="Connect with 25,000+ SpyMC agents for server updates, exclusive perks, and community events">
     <meta property="og:url" content="https://discord.spymc.xyz">
