--- a/discord.html
+++ b/discord.html
@@ -8,7 +8,7 @@
     <meta name="author" content="SpyMC Network">
     <link rel="icon" href="images/logo.png">
     <meta property="og:title" content="Join the Official SpyMC Discord Community">
-    <meta property="og:description" content="Connect with 25,000+ SpyMC agents for server updates, exclusive perks, and community events">
+    <meta property="og:description" content="Connect with 25,0000+ SpyMC agents for server updates, exclusive perks, and community events">
     <meta property="og:url" content="https://discord.spymc.xyz">
     <meta property="og:image" content="https://cdn.discordapp.com/icons/921023003981144125/a_3d448e19d990ae2b89f87b8854148dc4.gif?size=2048">
     <meta property="og:type" content="website">
@@ -401,28 +401,28 @@
                 <span>SERVER ONLINE</span>
             </div>
             <h1>JOIN THE SPYMC DISCORD</h1>
-            <p class="subtitle">Connect with 25,000+ agents for exclusive perks, early updates, and community events</p>
+            <p class="subtitle">Connect with 25,0000+ agents for exclusive perks, early updates, and community events</p>
         </header>
 
         <div class="discord-card">
             <div class="stats-container">
                 <div class="stat-item">
                     <span class="stat-label">
-                        <i class="fas fa-users"></i> Total Members
+                        <i class="fas fa-users"></i> Total Players
                     </span>
-                    <span class="stat-value">25K+</span>
+                    <span class="stat-value">250K+</span>
                 </div>
                 <div class="stat-item">
                     <span class="stat-label">
-                        <i class="fas fa-comments"></i> Active Chats
+                        <i class="fas fa-comments"></i> Active player
                     </span>
-                    <span class="stat-value">50+</span>
+                    <span class="stat-value">100-150+</span>
                 </div>
                 <div class="stat-item">
                     <span class="stat-label">
                         <i class="fas fa-calendar-star"></i> Monthly Events
                     </span>
-                    <span class="stat-value">10+</span>
+                    <span class="stat-value">1+</span>
                 </div>
             </div>
 
