--- a/all.html
+++ b/all.html
@@ -354,6 +354,13 @@
                 <p class="portal-desc">Connect with us on all platforms to stay updated with news and announcements.</p>
                 <a href="https://www.spymc.xyz/follow" class="portal-link" target="_blank">Follow Us <i class="fas fa-arrow-right"></i></a>
             </div>
+
+             <div class="portal-card">
+                <div class="portal-icon"><i class="fas fa-user-secret"></i></div>
+                <h3 class="portal-title">FREE RANKS</h3>
+                <p class="portal-desc">Learn about the exclusive achievement rank perks and how to obtain this elite status.</p>
+                <a href="https://www.spymc.xyz/spyrank.html" class="portal-link" target="_blank">Free Ranks <i class="fas fa-arrow-right"></i></a>
+            </div>
             
             <div class="portal-card">
                 <div class="portal-icon"><i class="fas fa-server"></i></div>
