--- a/rules.html
+++ b/rules.html
@@ -37,7 +37,7 @@
             <a href="shop.html" class="link">Shop</a>
             <a href="partner.html" class="link">Partner</a>
             <a href="https://solo.to/yoursenior" class="link">Owner</a>
-            <a href="https://status.spymc.xyz" class="link">Status</a>
+            <a href="status.html" class="link">Status</a>
             <a href="all.html" class="link">Others</a>
         </div>
   </div>
