--- a/all.html
+++ b/all.html
@@ -357,9 +357,9 @@
 
              <div class="portal-card">
                 <div class="portal-icon"><i class="fas fa-user-secret"></i></div>
-                <h3 class="portal-title">FREE RANKS</h3>
+                <h3 class="portal-title">RANKS INFO</h3>
                 <p class="portal-desc">Learn about the exclusive achievement rank perks and how to obtain this elite status.</p>
-                <a href="https://status.spymc.xyz/ranks.html" class="portal-link" target="_blank">Free Ranks <i class="fas fa-arrow-right"></i></a>
+                <a href="https://status.spymc.xyz/ranks.html" class="portal-link" target="_blank">Ranks Info <i class="fas fa-arrow-right"></i></a>
             </div>
             
             <div class="portal-card">
