--- a/status.html
+++ b/status.html
@@ -428,7 +428,7 @@
             <img src="https://i.ibb.co/tMF05rbH/image69.png" alt="SpyMC" class="logo">
             <h1>SPYMC SERVER STATUS</h1>
             <p class="subtitle"> </p>
-            <p class="subtitle">Real-time surveillance and operational oversight of all SpyMC game servers, ensuring every heartbeat, packet, and player action is tracked, logged, and controlled with absolute precision—no lag, no loopholes, just command-grade dominance.</p>
+            <p class="subtitle">Real-time surveillance and operational oversight of all SpyMC game servers, ensuring every heartbeat, no loopholes, just command-grade dominance.</p>
         </header>
 
         <div class="stats-grid" id="statsBar">
