--- a/status.html
+++ b/status.html
@@ -457,7 +457,7 @@
             <div class="footer-content">
                 <div class="refresh-info">
                     <i class="fas fa-sync-alt refresh-icon"></i>
-                    <span>Auto-refreshing every 3 seconds</span>
+                    <span>Auto-refreshing every 5 seconds..</span>
                 </div>
                 <div class="copyright">
                     © 2025 SpyMC Network. All rights reserved.
@@ -482,7 +482,7 @@
         let onlineServerCount = 0;
         let pingSum = 0;
         let pingCount = 0;
-        const refreshInterval = 3000; // 3 seconds
+        const refreshInterval = 5000; // 5 seconds
 
         // Mask IP address by blurring middle part
         function maskIP(ip) {
