--- a/all.html
+++ b/all.html
@@ -366,7 +366,7 @@
                 <div class="portal-icon"><i class="fas fa-heart"></i></div>
                 <h3 class="portal-title">MEDIA INFO</h3>
                 <p class="portal-desc">Learn about the exclusive server media rank perks and how to obtain this elite status.</p>
-                <a href="https://status.spymc.xyz/media.html" class="portal-link" target="_blank">Ranks Info <i class="fas fa-arrow-right"></i></a>
+                <a href="https://www.spymc.xyz/media.html" class="portal-link" target="_blank">Ranks Info <i class="fas fa-arrow-right"></i></a>
             </div>
             
             <div class="portal-card">
