--- a/partner.html
+++ b/partner.html
@@ -589,8 +589,8 @@
     
     <div class="container">
         <div class="logo-container">
-            <a href="https://streamline-servers.com" target="_blank">
-                <img src="https://streamlinepanel.com/Views/be347efc-72b6-478b-8829-22ec557773f5/Images/LargeLogo.png" alt="Streamline Servers" class="partner-logo streamline-logo floating">
+            <a href="https://aleforge.net" target="_blank">
+                <img src="https://i.ibb.co/XGxxKnD/logo.png" alt="Streamline Servers" class="partner-logo streamline-logo floating">
             </a>
             <div class="vs-circle">X</div>
             <a href="#" target="_blank">
