--- a/partner.html
+++ b/partner.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AleForge x SpyMC Partnership | Premium Minecraft Hosting</title>
+    <link rel="icon" href="images/logo.png">
     <meta name="description" content="Discover the powerful partnership between AleForge and SpyMC - combining enterprise-grade hosting infrastructure with premium Minecraft gaming experience.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
