--- a/status.html
+++ b/status.html
@@ -469,12 +469,12 @@
     <script>
         // Server data
         const servers = {
-            "FFA": "103.107.199.231:25585",
-            "LifeSteal": "103.107.199.231:25575",
+            "FFA": "play.aleforge.net:33005",
+            "Survival": "51.79.162.191:25566",
             "Crystal": "15.235.180.231:25575",
             "FFA2": "139.99.33.51:25565",
             "OG": "51.79.163.70:25565",
-            "Lobby": "15.235.180.231:25576"
+            "Lobby": "play.aleforge.net:33002"
         };
 
         // Global variables
