--- a/status.html
+++ b/status.html
@@ -471,10 +471,10 @@
         const servers = {
             "FFA": "play.aleforge.net:33005",
             "Survival": "51.79.162.191:25566",
-            "Crystal": "15.235.180.231:25575",
-            "FFA2": "139.99.33.51:25565",
-            "OG": "51.79.163.70:25565",
-            "Lobby": "play.aleforge.net:33002"
+            "Lobby": "play.aleforge.net:33002",
+            "FFA2": "127.0. 0.1:25565",
+            "OG": "127.0. 0.1:25565",
+            "Lobby": "127.0. 0.1:25565"
         };
 
         // Global variables
