--- a/status.html
+++ b/status.html
@@ -474,7 +474,7 @@
             "Lobby": "play.aleforge.net:33002",
             "FFA2": "127.0. 0.1:25565",
             "OG": "127.0. 0.1:25565",
-            "Lobby": "127.0. 0.1:25565"
+            "Other": "127.0. 0.1:25565"
         };
 
         // Global variables
