--- a/all.html
+++ b/all.html
@@ -312,6 +312,14 @@
                 <p class="portal-desc">Check your competitive ranking and see where you stand among SpyMC agents.</p>
                 <a href="https://www.spymc.xyz/search.html" class="portal-link" target="_blank">View Rankings <i class="fas fa-arrow-right"></i></a>
             </div>
+
+            <div class="portal-grid">
+            <div class="portal-card">
+                <div class="portal-icon"><i class="fas fa-trophy"></i></div>
+                <h3 class="portal-title">Partner</h3>
+                <p class="portal-desc">SpyMC is proud to be a partner, actively supporting and promoting your services as part of our ongoing collaboration</p>
+                <a href="https://www.spymc.xyz/partner.html" class="portal-link" target="_blank">View Rankings <i class="fas fa-arrow-right"></i></a>
+            </div>
             
             <div class="portal-card">
                 <div class="portal-icon"><i class="fas fa-user-secret"></i></div>
@@ -367,6 +375,13 @@
                 <h3 class="portal-title">MEDIA INFO</h3>
                 <p class="portal-desc">Learn about the exclusive server media rank perks and how to obtain this elite status.</p>
                 <a href="https://www.spymc.xyz/media.html" class="portal-link" target="_blank">Ranks Info <i class="fas fa-arrow-right"></i></a>
+            </div>
+
+            <div class="portal-card">
+                <div class="portal-icon"><i class="fas fa-heart"></i></div>
+                <h3 class="portal-title">Players Count</h3>
+                <p class="portal-desc">Check real-time server player status, how to many player are playing in this elite status.</p>
+                <a href="https://www.spymc.xyz/players.html" class="portal-link" target="_blank">Ranks Info <i class="fas fa-arrow-right"></i></a>
             </div>
             
             <div class="portal-card">
